# plex-playlist-manager

./: mypy.ini  pyproject.toml
plex_playlist_manager/: __init__.py  apple_music.py  main.py  plex.py  util.py
